--- a/HD.html
+++ b/HD.html
@@ -6,12 +6,11 @@
         <title>MiniPromise</title>
     </head>
     <body>
-        <script src="./MiniPromise.js"></script>
+        <script src="./HD.js"></script>
         <script>
-            var p = new MiniPromise((resolve, reject) => {
+            var p = new HD((resolve, reject) => {
                 console.log("开始执行 MiniPromise 了");
                 resolve("MiniPromise resolve");
-
                 // reject("rejected");
             });
 
